finally fixed aligning

--- a/client/src/components/News/news.scss
+++ b/client/src/components/News/news.scss
@@ -13,22 +13,27 @@
     width: 33.33%;
     height: 60%;
     padding: 2%;
+    display: grid;
+    
   
 }
 .newscontent{   
     float: left; 
 }
 // .firstbox{
-//     padding: 7% 2.5% auto 0%;
+//     padding: 6% 3% 0% 0%;
 // }
 // .secondbox{
-//     padding: 3.5% 2.5% 0% 0%;
+//     padding: 3.5% 3% 0% 0%;
 // }
 // .thirdbox{
-//     padding: 0% 2% 0% 2.5%;
+//     padding: 1% 3% 0% 0%;
 // }
 h3{
     color: rgb(165, 164, 164);
+}
+.newsheader{
+    font-size: 15px;
 }
 
 .NEWS:after {
